# layo

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md  package.json  pnpm-lock.yaml  vercel.json
.github/codex/: complete-text-orientation-docs.cjs  last-baseline-patch.mjs  review-fix.mjs  run-last-baseline-patch.mjs  text-orientation-patch-runner.cjs  text-orientation-patch.cjs
.github/workflows/: authorization-backup-drill.yml  (+41 more)
api/: [...path].ts  bridge.ts  health.ts
crates/collab-relay/: Cargo.toml
crates/collab-relay/src/: config.rs  frame.rs  lib.rs  main.rs  room.rs  server.rs
docs/: PROJECT_BRIEF.md
scripts/: check-agent-learning-loop.test.mjs  check-deployment-artifacts.test.mjs  check-design-rules.mjs  check-design-rules.test.mjs  check-dev-scripts.test.mjs  check-e2e-script-coverage.test.mjs  check-layo-branding.test.mjs  check-penpot-maturity.test.mjs  check-post-merge-cleanup.test.mjs  codex-arc-smooth-docs-patch.py  codex-arc-smooth-path-patch.py  codex-orthogonal-baseline-patch.mjs  codex-radial-docs-patch.py  codex-radial-final-docs-patch.py  codex-radial-patch.py  codex-radial-pdf-docs-patch.py  codex-radial-pdf-patch.py  codex-radial-plan-status-fix.py  codex-radial-width-docs-patch.py  codex-radial-width-patch.py  codex-radial-width-pdf-docs-patch.py  codex-radial-width-pdf-patch.py  codex-stabilize-library-token-e2e.mjs  layo-migration-review.mjs  layo-storage-backup.mjs  live-deployment-smoke.mjs  live-deployment-smoke.test.mjs  run-e2e.mjs  sync-github-about-homepage.mjs  sync-github-about-homepage.test.mjs
(+526 files in other folders)
