[package]
name = "collab-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt", "rt-multi-thread", "sync"] }
tower = { version = "0.5", features = ["util"] }
